[workspace]
members = ["kernel", "kernel-macros", "xtask"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
bitflags = { version = "2.9", default-features = false }
bootloader = "0.11.12"
bootloader_api = "0.11.12"
clap = { version = "4.5", features = ["derive"] }
num-traits = { version = "0.2", default-features = false }
serde_json = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
