[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[dependencies]
bitflags.workspace = true
bootloader_api.workspace = true
linked_list_allocator.workspace = true
num-traits.workspace = true
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }

[dev-dependencies]
kernel-macros = { path = "../kernel-macros" }
