[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[dependencies]
bitflags.workspace = true
bootloader_api.workspace = true
num-traits.workspace = true
atomic_enum.workspace = true
oci-spec = { git = "https://github.com/n4mlz/oci-spec-rs-nostd", default-features = false, features = ["runtime"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
linked_list_allocator = { version = "0.10", default-features = false }

[dev-dependencies]
kernel-macros = { path = "../kernel-macros" }
