[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/kernel.rs"

[dependencies]
bitflags.workspace = true
bootloader_api.workspace = true
num-traits.workspace = true
atomic_enum.workspace = true
oci-spec = { git = "https://github.com/n4mlz/oci-spec-rs-nostd", default-features = false, features = ["runtime"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }
buddy_system_allocator = { version = "0.12", default-features = false, features = ["use_spin"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp"] }
no-std-net = "0.6.0"

[dev-dependencies]
kernel-macros = { path = "../kernel-macros" }
